--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 
-fastapi==0.115.8
-uvicorn==0.34.0
+Flask==3.1.0
 joblib==1.4.2
-numpy==1.26.4
-scikit-learn==1.6.1
-google-cloud-storage==2.19.0
-lightgbm==4.5.0
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+matplotlib-venn==1.1.1
+openai==1.61.1
 pandas==2.2.2
-pandas-datareader==0.10.0
-pandas-gbq==0.26.1
-pandas-stubs==2.2.2.240909
+regex==2024.11.6
+scikit-image==0.25.1
+scikit-learn==1.6.1
+scipy==1.13.1
+seaborn==0.13.2
+sklearn-compat==0.1.3
+sklearn-pandas==2.2.0
+streamlit==1.42.0
+oauthlib==3.2.2
