--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,4 @@ sklearn-compat==0.1.3
 sklearn-pandas==2.2.0
 streamlit==1.42.0
 oauthlib==3.2.2
-pinecone-client==6.0.0
-pinecone-plugin-interface==0.0.7
+pinecone==2.2.4
