--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,8 @@ sklearn-pandas==2.2.0
 streamlit==1.42.0
 oauthlib==3.2.2
 pinecone==6.0.1
+langchain==0.3.19
+langchain-core==0.3.37
+langchain-text-splitters==0.3.6
+langcodes==3.5.0
+langsmith==0.3.8
