--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ streamlit==1.42.0
 oauthlib==3.2.2
 pinecone==6.0.1
 langchain==0.3.19
+langchain-community==0.3.18
 langchain-core==0.3.37
 langchain-text-splitters==0.3.6
 langcodes==3.5.0
