--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ sklearn-pandas==2.2.0
 streamlit==1.42.0
 oauthlib==3.2.2
 
+langchain-openai==0.1.6
 langchain==0.3.19
 langchain-community==0.3.18
 langchain-core==0.3.37
