--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,9 @@
-
-Flask==3.1.0
-joblib==1.4.2
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
-matplotlib-venn==1.1.1
-openai==1.61.1
-pandas==2.2.2
-regex==2024.11.6
-scikit-image==0.25.1
-scikit-learn==1.6.1
-scipy==1.13.1
-seaborn==0.13.2
-sklearn-compat==0.1.3
-sklearn-pandas==2.2.0
 streamlit==1.42.0
-oauthlib==3.2.2
-
+openai==1.61.1
 langchain-openai==0.1.6
+langchain-core==0.1.47
 langchain==0.3.19
 langchain-community==0.3.18
 langchain-core==0.1.47
 langchain-text-splitters==0.3.6
-langcodes==3.5.0
+
